--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <head>
+    <ol>
+      <li>О нас</li>
+      <li>Контакты</li>
+      <li>Карта</li>
+    </ol>
+  </head>
   <section>
     <div class="item">descrition1</div>
     <div class="item">descrition2</div>
